--- a/elasticsearch/build.gradle
+++ b/elasticsearch/build.gradle
@@ -17,7 +17,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch:7.17.16'
 //	implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.16.1'
 //	implementation 'org.elasticsearch:elasticsearch:8.9.0'
 //	implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.0'
