feat: Kafka & ELK - V1 애플리케이션 코드로 직접 ES CRUD 코드 추가

--- a/KafkaAndELK/src/main/resources/application.yml
+++ b/KafkaAndELK/src/main/resources/application.yml
@@ -1,4 +1,12 @@
 spring:
+  data:
+    #### 엘라스틱 서치 ####
+    elasticsearch:
+      cluster-name: elasticsearch
+      cluster-nodes: localhost:9200
+      repositories:
+        enabled: true
+    #####################
   output:
     ansi:
       enabled: always
@@ -18,4 +26,3 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
-        default_batch_fetch_size: 100
