--- a/KafkaAndELK/src/main/resources/docker-compose.yml
+++ b/KafkaAndELK/src/main/resources/docker-compose.yml
@@ -1,19 +1,44 @@
-version: '2'
+version: "3.8"
+
+volumes:
+  esdata01:
+    driver: local
+
+networks:
+  default:
+    name: elastic
+    external: false
+
 services:
-  zookeeper:
-    image: wurstmeister/zookeeper
-    container_name: zookeeper
-    ports:
-      - "2181:2181"
-  kafka:
-    image: wurstmeister/kafka
-    depends_on:
-      - zookeeper
-    container_name: kafka
-    ports:
-      - "9092:9092"
-    environment:
-      KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+  es01:
+    image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION} # Elasticsearch 이미지 사용
+    labels:
+      co.elastic.logs/module: elasticsearch # 로그 모듈로 elasticsearch 사용
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - esdata01:/usr/share/elasticsearch/data # 데이터 디렉토리를 컨테이너에 마운트
+    ports:
+      - ${ES_PORT}:9200
+    environment: # 환경 변수 설정
+      - node.name=es01 # 노드 이름 설정
+      - cluster.name=${CLUSTER_NAME} # 클러스터 이름 설정
+      - discovery.type=single-node # 단일 노드 모드 설정
+      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD} # Elastic 사용자 비밀번호 설정
+      - bootstrap.memory_lock=true # 메모리 잠금 설정
+      - xpack.security.enabled=true # X-Pack 보안 활성화
+      - xpack.security.http.ssl.enabled=false # HTTP SSL 비활성화
+      - xpack.security.transport.ssl.enabled=false # Transport SSL 비활성화
+      - xpack.license.self_generated.type=${LICENSE} # 라이선스 유형 설정
+    mem_limit: ${ES_MEM_LIMIT} # 메모리 제한 설정
+    ulimits: # ulimit 설정
+      memlock: # 메모리 락은 무제한으로 설정
+        soft: -1
+        hard: -1
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "curl -s http://localhost:9200 | grep -q 'missing authentication credentials'",
+        ]
+      interval: 10s
+      timeout: 10s
+      retries: 120
