fix: Kafka & ELK - 중간정리

--- a/KafkaAndELK/src/main/resources/logstash.conf
+++ b/KafkaAndELK/src/main/resources/logstash.conf
@@ -5,7 +5,7 @@ input {
     jdbc_connection_string => "jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DB}"
     jdbc_user => "${MYSQL_USER}"
     jdbc_password => "${MYSQL_PASSWORD}"
-    schedule => "*/1 * * * *" # 1분마다 실행
+    schedule => "*/10 * * * * *" # 10초마다 실행
 
     # 변경 내역을 추적할 데이터베이스의 컬럼을 지정
     tracking_column => "updated_at"
