fix: Kafka & ELK - V1 V2 완전 분리

--- a/KafkaAndELK/src/main/resources/logstash.conf
+++ b/KafkaAndELK/src/main/resources/logstash.conf
@@ -12,7 +12,7 @@ input {
     use_column_value => true
 
     # sql_last_value -> logstash에서 내부적으로 다루는 마지막 실행 시간 변수
-    statement => "SELECT * FROM product WHERE updated_at > :sql_last_value" #  마지막 실행 시간 이후에 업데이트된 updated_at 컬럼 값을 기준으로 데이터를 가져옴
+    statement => "SELECT * FROM productv2 WHERE updated_at > :sql_last_value" #  마지막 실행 시간 이후에 업데이트된 updated_at 컬럼 값을 기준으로 데이터를 가져옴
 
     # 마지막 실행 메타데이터 파일의 경로
     last_run_metadata_path => "/usr/share/logstash/.logstash_jdbc_last_run"
@@ -22,7 +22,7 @@ input {
 output {
   elasticsearch {
     hosts => ["http://es01:9200"]
-    index => "product"
+    index => "product_v2"
     document_id => "%{id}"
     user => "elastic"
     password => "changeme"
