--- a/KafkaAndELK/src/main/resources/docker-compose.yml
+++ b/KafkaAndELK/src/main/resources/docker-compose.yml
@@ -33,6 +33,7 @@ services:
     image: docker.elastic.co/logstash/logstash:${STACK_VERSION}
     volumes:
       - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+#      - ./logstash.yml:/usr/share/logstash/config/logstash.yml # event.cancel 로그 확인용
     environment:
       - xpack.monitoring.elasticsearch.hosts=http://es01:9200
       - MYSQL_HOST=${MYSQL_HOST}
