--- a/java/src/main/resources/application.yml
+++ b/java/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
     datasource:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/test_c
+        url: jdbc:mysql://localhost:3306/test_c?rewriteBatchedStatements=true
         hikari:
             username: root
             password: 1234
@@ -9,6 +9,10 @@ spring:
         open-in-view: false
         hibernate:
             ddl-auto: update
+        show-sql: true
+        properties:
+            hibernate:
+                format_sql: true
 
 logging:
     level:
