feat: 자바(스프링) - JPA 시퀀스 방식 엔티티 추가

--- a/java/src/main/resources/application.yml
+++ b/java/src/main/resources/application.yml
@@ -5,6 +5,11 @@ spring:
         hikari:
             username: root
             password: 1234
+#    datasource:
+#        url: jdbc:postgresql://localhost:5432/gajamap?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+#        username: postgres
+#        password: abc
+#        driver-class-name: org.postgresql.Driver
     jpa:
         open-in-view: false
         hibernate:
@@ -13,10 +18,17 @@ spring:
         properties:
             hibernate:
                 format_sql: true
+                use_sql_comments: true
 
 logging:
     level:
         org:
+            hibernate:
+                type: TRACE
+                stat: debug
+                orm:
+                    jdbc:
+                        bind: trace
             springframework:
                 jdbc:
                     core:
