--- a/java/src/main/resources/application.yml
+++ b/java/src/main/resources/application.yml
@@ -5,11 +5,6 @@ spring:
         hikari:
             username: root
             password: 1234
-#    datasource:
-#        url: jdbc:postgresql://localhost:5432/gajamap?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-#        username: postgres
-#        password: abc
-#        driver-class-name: org.postgresql.Driver
     jpa:
         open-in-view: false
         hibernate:
@@ -17,20 +12,21 @@ spring:
         show-sql: true
         properties:
             hibernate:
+                jdbc.batch_size: 3
                 format_sql: true
                 use_sql_comments: true
 
-logging:
-    level:
-        org:
-            hibernate:
-                type: TRACE
-                stat: debug
-                orm:
-                    jdbc:
-                        bind: trace
-            springframework:
-                jdbc:
-                    core:
-                        JdbcTemplate: DEBUG
-                        StatementCreatorUtils: TRACE
+#logging:
+#    level:
+#        org:
+#            hibernate:
+#                type: TRACE
+#                stat: debug
+##                orm:
+##                    jdbc:
+##                        bind: trace
+###            springframework:
+###                jdbc:
+###                    core:
+###                        JdbcTemplate: DEBUG
+###                        StatementCreatorUtils: TRACE
